# rest_utils

./: Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
migrations/2025-05-05-114253_create_tokens/: down.sql  up.sql
migrations/2025-05-05-114458_create-utils/: down.sql  up.sql
migrations/2025-05-05-181012_add/: up.sql
src/: main.rs  schema.rs
src/config/: db.rs
src/models/: token.rs  utils.rs
src/repositories/: factory.rs  mod.rs  token_repositories.rs  utils_repositories.rs
src/routes/: mod.rs  token_routes.rs  utils_routes.rs
src/utils/: utils.rs
